--- a/css/resume.css
+++ b/css/resume.css
@@ -72,7 +72,8 @@ p.lead {
 }
 
 .social-icons a:hover {
-  background-color: #BD5D38;
+  background-color: #0077b3;
+  /*background-color: #BD5D38;*/
 }
 
 .dev-icons {
@@ -80,7 +81,8 @@ p.lead {
 }
 
 .dev-icons .list-inline-item i:hover {
-  color: #BD5D38;
+  color: #0077b3;
+  /*color: #BD5D38;*/
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -91,6 +93,7 @@ p.lead {
 
 #sideNav .navbar-toggler:focus {
   outline-color: #d48a6e;
+  /*outline-color: #d48a6e;*/
 }
 
 @media (min-width: 992px) {
@@ -176,17 +179,21 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: #0077b3 !important;
+  /*background-color: #BD5D38; !important*/
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: #0077b3 !important;
+  /*color: #BD5D38 !important;*/
 }
 
 a {
-  color: #BD5D38;
+  color: #0077b3;
+  /*color: #BD5D38;*/
 }
 
 a:hover, a:focus, a:active {
   color: #824027;
+  /*color: #824027;*/
 }
